src/test/resources/nox/errors/err_no_main.nox
// @test:error "CompilationError"
int foo() {
    return 1;
}
